objects/Account.object
<CustomObject>
    <fields>
        <fullName>Copado_Security_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Security Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_to_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We will delete this field using a destructive change</description>
        <label>Field to Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Test__c</fullName>
        <label>Sales Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>